<resources>
    <string name="app_name">SecretSantaAI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_now">Register Now !</string>
    <string name="gift_box_description">Gift box illustration</string>
    <!-- General UI Strings -->


    <!-- Register Screen -->
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_now">Login now</string>

    <!-- Error Messages -->
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_passwords_mismatch">Passwords do not match</string>

    <!-- Success Messages -->
    <string name="register_success">Registration successful!</string>
    <string name="join_group">Join Group</string>
    <string name="home">Home</string>
    <string name="ai_help">AI Help</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="create_new_group">Create New Group</string>
    <string name="create">Create</string>
    <string name="new_group">NEW GROUP</string>
    <string name="create_group">Create Group</string>
    <string name="logout">Logout</string>
    <string name="subscription">Subscription</string>
    <string name="help">Help</string>
    <string name="language_region">Language / Region</string>
    <string name="theme">Theme</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="groups">Groups</string>
    <string name="error_fill_all_fields">Please fill in all fields</string>
    <string name="group_created_successfully">Group Created Successfully</string>
    <string name="failed_to_fetch_user_data">Failed to fetch user data</string>
    <!-- Other string resources -->
    <string name="group_not_member">Grup Üyesi Değilsiniz</string>
    <string name="waiting_for_admin">Çekiliş için yönetici bekleniyor</string>
    <string name="draw_raffle">Draw Raffle</string>
    <string name="show_result">Show Result</string>
    <string name="minimum_three_members">En Az 3 Kişi Olmalı</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="no_match_found">No match found.</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="please_select_group">Please select a group</string>
    <string name="qr_code_generated">QR Code for %1$s generated</string>
    <string name="error_generating_qr_code">Error generating QR code</string>
    <string name="valid_group_id_required">Please enter a valid Group ID</string>
    <string name="group_join_success">Successfully joined the group</string>
    <string name="group_join_failure">Failed to join the group: %1$s</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="join_group_tab">Join Group</string>
    <string name="invite_tab">Invite</string>
    <string name="tab_default">Tab %1$d</string>
    <string name="participants_count">%1$d Participants</string>
    <string name="no_date_set">No Date Set</string>
    <string name="save">Save</string>
    <string name="select_language">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="group_id">Group ID</string>
    <string name="join">Join</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="looks_like_your_favorites_screen_is_empty_the_gift_recommendations_you_add_to_favorites_will_appear_here">Looks like your favorites screen is empty. The gift recommendations you add to favorites will appear here.</string>
    <string name="ai_gift_suggestions">AI Gift Suggestions</string>
    <string name="fill_in_the_details_below_for_personalized_gift_suggestions">Fill in the details below for personalized gift suggestions</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="special_occasion">Special Occasion</string>
    <string name="interests">Interests</string>
    <string name="books_technology_sports_etc">Books, technology, sports, etc.</string>
    <string name="budget">Budget</string>
    <string name="get_gift_suggestions_from_ai">Get Gift Suggestions from AI</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="select_date">Select Date</string>
    <string name="enter_a_note">Enter a note</string>
    <string name="you_will_give_a_gift_to">You will give a gift to …</string>
    <string name="error_message">Error message</string>
    <string name="you_have_not_joined_any_groups">You have not joined any groups</string>
    <string name="select_a_group_to_generate_qr">Select a Group to Generate QR</string>
    <string name="join_a_group_with_invite_code">Join a Group With Invite Code</string>
    <string name="gift_recommendation">Gift Recommendation</string>
    <string name="group_name">Group Name</string>
    <string name="people_count">People Count</string>
    <string name="date_info">Date Info</string>


    <string name="gift_prompt">
    Age: %1$s
    Gender: %2$s
    Occasion: %3$s
    Interests: %4$s
    Budget: %5$s
    Please provide exactly 10 gift suggestions in the format below. Each suggestion should be a concise sentence containing only the gift suggestion. Do not add any other explanation or text.
    1. [Gift Suggestion 1]
    2. [Gift Suggestion 2]
    3. [Gift Suggestion 3]
    4. [Gift Suggestion 4]
    5. [Gift Suggestion 5]
    6. [Gift Suggestion 6]
    7. [Gift Suggestion 7]
    8. [Gift Suggestion 8]
    9. [Gift Suggestion 9]
    10. [Gift Suggestion 10]
</string>

    <string-array name="special_occasions">
        <item>Birthday</item>
        <item>Christmas</item>
        <item>New Year\'s Day</item>
        <item>Mother\'s Day</item>
        <item>Father\'s Day</item>
        <item>Valentine\'s Day</item>
        <item>Graduation</item>
        <item>New Year</item>
    </string-array>



</resources>