<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />


    <item
        android:id="@+id/aiFavoritesFragment"
        android:icon="@drawable/baseline_card_giftcard_24"
        android:title="@string/favorites" />

    <item
        android:id="@+id/aiHelpFragment"
        android:icon="@drawable/baseline_auto_awesome_24"
        android:title="@string/ai_help" />
    <item
        android:id="@+id/tabFragment"
        android:icon="@drawable/baseline_group_add_24"
        android:title="@string/groups" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
</menu>
