<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:backgroundTint="@color/primary_light_pink"
    android:background="@color/white">


    <ImageView
        android:id="@+id/gift_box_imageview"
        android:layout_width="139dp"
        android:layout_height="125dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/gift_box_description"
        app:srcCompat="@drawable/gift_box" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textColor="@color/on_background"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textbox_shape"
        android:backgroundTint="@color/primary_light_extra_pink"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/padding_horizontal"
        android:paddingEnd="@dimen/padding_horizontal"
        android:textColorHint="@color/tgray" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_shape"
        android:backgroundTint="@color/primary_light_extra_pink"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/padding_horizontal"
        android:paddingEnd="@dimen/padding_horizontal"
        android:textColorHint="@color/tgray" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_shape"
        android:backgroundTint="@color/primary_light_extra_pink"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/padding_horizontal"
        android:paddingEnd="@dimen/padding_horizontal"
        android:textColorHint="@color/tgray" />

    <TextView
        android:id="@+id/textViewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/registerConfirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_shape"
        android:backgroundTint="@color/primary_light_extra_pink"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/padding_horizontal"
        android:paddingEnd="@dimen/padding_horizontal"
        android:textColorHint="@color/tgray" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_account"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/loginNowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:textSize="@dimen/text_size_large"
        android:text="@string/login_now"
        android:textColor="@color/on_surface"
        android:textStyle="bold" />

</LinearLayout>
