<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350sp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:padding="16dp"
    android:backgroundTint="@color/primary_light_extra_pink">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <!-- Başlık -->
        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_logout"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Alt Başlık -->
        <TextView
            android:id="@+id/tvDialogSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- İptal Butonu -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/primary_light"
            app:strokeWidth="2dp"
            android:textColor="@color/primary_light"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvDialogSubtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDialogLogout"
            app:layout_constraintWidth_percent="0.5"/>

        <!-- Çıkış Yap Butonu -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogLogout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="14sp"
            android:backgroundTint="@color/on_surface"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvDialogSubtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDialogCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
